--- a/src/frontend_swift/OneBank/OneBank/View/Dashboard.storyboard
+++ b/src/frontend_swift/OneBank/OneBank/View/Dashboard.storyboard
@@ -7,29 +7,83 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Dashboad View Controller-->
         <scene sceneID="dzh-vu-WE0">
             <objects>
-                <viewController id="fbm-al-6CU" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="fullScreen" id="fbm-al-6CU" customClass="DashboadViewController" customModule="OneBank" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Jib-hY-KIa">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AII-P7-eP4">
-                                <rect key="frame" x="205" y="366" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HYC-kB-aPS" userLabel="Settings">
+                                <rect key="frame" x="351" y="44" width="35" height="33"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gear" translatesAutoresizingMaskIntoConstraints="NO" id="HSR-g7-1N4">
+                                        <rect key="frame" x="9" y="8" width="17" height="17"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.78431372549019607" green="0.86274509803921573" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstItem="HSR-g7-1N4" firstAttribute="leading" secondItem="HYC-kB-aPS" secondAttribute="leading" constant="9" id="492-Tg-BZM"/>
+                                    <constraint firstAttribute="bottom" secondItem="HSR-g7-1N4" secondAttribute="bottom" constant="8" id="9ql-Jh-HGW"/>
+                                    <constraint firstAttribute="trailing" secondItem="HSR-g7-1N4" secondAttribute="trailing" constant="9" id="BOK-tM-YhI"/>
+                                    <constraint firstAttribute="width" constant="35" id="G33-zg-m85"/>
+                                    <constraint firstItem="HSR-g7-1N4" firstAttribute="top" secondItem="HYC-kB-aPS" secondAttribute="top" constant="8" id="rb1-bZ-mRh"/>
+                                    <constraint firstAttribute="height" constant="33" id="tHM-sI-lHv"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IIa-DV-U7i" userLabel="User">
+                                <rect key="frame" x="20" y="98" width="374" height="96"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="profile" translatesAutoresizingMaskIntoConstraints="NO" id="DXe-Iq-nKJ">
+                                        <rect key="frame" x="8" y="7" width="83" height="83"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Welcome back," textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5YJ-h3-Dg4">
+                                        <rect key="frame" x="99" y="8" width="267" height="33"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pRp-YT-CkY">
+                                        <rect key="frame" x="99" y="49" width="267" height="26"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="96" id="4Xt-pT-Ymo"/>
+                                </constraints>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="IIa-DV-U7i" firstAttribute="top" secondItem="Old-1U-dtf" secondAttribute="top" constant="54" id="2qZ-ec-Ddi"/>
+                            <constraint firstItem="Old-1U-dtf" firstAttribute="trailing" secondItem="HYC-kB-aPS" secondAttribute="trailing" constant="28" id="67b-aN-gP2"/>
+                            <constraint firstItem="IIa-DV-U7i" firstAttribute="leading" secondItem="Old-1U-dtf" secondAttribute="leading" constant="20" id="YDH-F3-gSz"/>
+                            <constraint firstItem="Old-1U-dtf" firstAttribute="trailing" secondItem="IIa-DV-U7i" secondAttribute="trailing" constant="20" id="b0q-2O-L9V"/>
+                            <constraint firstItem="HYC-kB-aPS" firstAttribute="top" secondItem="Old-1U-dtf" secondAttribute="top" id="rur-XH-UTr"/>
+                            <constraint firstItem="HYC-kB-aPS" firstAttribute="leading" secondItem="Old-1U-dtf" secondAttribute="leading" constant="351" id="wpS-1J-Ceo"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Old-1U-dtf"/>
                     </view>
+                    <connections>
+                        <outlet property="profileImage" destination="DXe-Iq-nKJ" id="MIp-1v-sw3"/>
+                        <outlet property="setttingsView" destination="HYC-kB-aPS" id="LHO-Ct-URA"/>
+                        <outlet property="usernameLabel" destination="pRp-YT-CkY" id="XaW-fu-NEa"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gKE-wM-vJa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="120" y="126"/>
+            <point key="canvasLocation" x="118.84057971014494" y="125.89285714285714"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="gear" width="51" height="51"/>
+        <image name="profile" width="189" height="189"/>
+    </resources>
 </document>
