--- a/src/frontend_swift/OneBank/OneBank/View/Base.lproj/Main.storyboard
+++ b/src/frontend_swift/OneBank/OneBank/View/Base.lproj/Main.storyboard
@@ -66,6 +66,9 @@
                                         <integer key="value" value="8"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <segue destination="OY1-Ic-VWk" kind="showDetail" id="aha-Un-pIt"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Smarter way to manage all your bank accounts in one app." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gbg-zz-cuk">
                                 <rect key="frame" x="48" y="721" width="282" height="50"/>
@@ -103,10 +106,10 @@
             </objects>
             <point key="canvasLocation" x="-29" y="154"/>
         </scene>
-        <!--Dashboard-->
+        <!--Login-->
         <scene sceneID="RDS-Pg-Ufn">
             <objects>
-                <viewControllerPlaceholder storyboardName="Dashboard" id="OY1-Ic-VWk" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardName="Login" id="OY1-Ic-VWk" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="cgV-0R-kkm"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Gqi-bI-gId" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
