--- a/src/frontend_swift/OneBank/OneBank/View/Login.storyboard
+++ b/src/frontend_swift/OneBank/OneBank/View/Login.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="tk9-9s-JmK">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
@@ -18,7 +18,7 @@
         <!--View Controller-->
         <scene sceneID="1GG-Sa-hWz">
             <objects>
-                <viewController id="tk9-9s-JmK" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="fullScreen" id="tk9-9s-JmK" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="tNh-u7-PjO">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -42,15 +42,78 @@
                                 <color key="textColor" red="0.48627450980392156" green="0.52156862745098043" blue="0.61568627450980395" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a2b-cN-ISI">
+                                <rect key="frame" x="67" y="606" width="180" height="51"/>
+                                <color key="backgroundColor" red="0.94509803921568625" green="0.95294117647058818" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="51" id="bHt-5v-JpR"/>
+                                    <constraint firstAttribute="width" constant="180" id="yXO-wO-Jg5"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="ProximaNova-Bold" family="Proxima Nova" pointSize="23"/>
+                                <state key="normal" title="Login">
+                                    <color key="titleColor" red="0.2282530431" green="0.2149821455" blue="0.74427907120000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="8"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4Jz-8w-pHD">
+                                <rect key="frame" x="67" y="370" width="347" height="46"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="46" id="5Ry-Fm-P5q"/>
+                                    <constraint firstAttribute="width" constant="347" id="gg6-zP-Xne"/>
+                                </constraints>
+                                <color key="textColor" red="0.2282530431" green="0.2149821455" blue="0.74427907120000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="me3-2y-zZ1">
+                                <rect key="frame" x="67" y="456" width="347" height="46"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="46" id="Pld-t4-JDW"/>
+                                    <constraint firstAttribute="width" constant="347" id="jIa-Sk-r0t"/>
+                                </constraints>
+                                <color key="textColor" red="0.2282530431" green="0.2149821455" blue="0.74427907120000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wds-FL-X1s">
+                                <rect key="frame" x="67" y="416" width="347" height="1"/>
+                                <color key="backgroundColor" red="0.5490196078431373" green="0.58039215686274503" blue="0.66274509803921566" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="z82-yI-iEE"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tec-wx-JkI">
+                                <rect key="frame" x="67" y="499" width="347" height="1"/>
+                                <color key="backgroundColor" red="0.54901960780000003" green="0.58039215690000001" blue="0.66274509800000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="IxS-8y-vnJ"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="a2b-cN-ISI" firstAttribute="leading" secondItem="yho-iR-OSw" secondAttribute="leading" constant="67" id="0Qv-bx-Oxd"/>
+                            <constraint firstItem="Tec-wx-JkI" firstAttribute="width" secondItem="me3-2y-zZ1" secondAttribute="width" id="15q-sf-j3D"/>
+                            <constraint firstItem="4Jz-8w-pHD" firstAttribute="trailing" secondItem="yho-iR-OSw" secondAttribute="trailing" id="3ZE-gt-Npx"/>
                             <constraint firstItem="VYk-HQ-VeZ" firstAttribute="leading" secondItem="yho-iR-OSw" secondAttribute="leading" constant="67" id="5Sg-3u-HER"/>
+                            <constraint firstItem="me3-2y-zZ1" firstAttribute="trailing" secondItem="yho-iR-OSw" secondAttribute="trailing" id="5px-0e-DWV"/>
+                            <constraint firstItem="4Jz-8w-pHD" firstAttribute="top" secondItem="IPg-aN-bz5" secondAttribute="bottom" constant="50" id="6A9-E8-oCW"/>
                             <constraint firstItem="IPg-aN-bz5" firstAttribute="top" secondItem="VYk-HQ-VeZ" secondAttribute="bottom" constant="1" id="8fO-te-zkd"/>
+                            <constraint firstAttribute="trailing" secondItem="Tec-wx-JkI" secondAttribute="trailing" id="BJG-LG-AGt"/>
+                            <constraint firstItem="a2b-cN-ISI" firstAttribute="top" secondItem="me3-2y-zZ1" secondAttribute="bottom" constant="104" id="Ffz-QZ-YY4"/>
                             <constraint firstItem="IPg-aN-bz5" firstAttribute="leading" secondItem="yho-iR-OSw" secondAttribute="leading" constant="67" id="LKm-ja-m8q"/>
+                            <constraint firstAttribute="trailing" secondItem="Wds-FL-X1s" secondAttribute="trailing" id="SCS-Va-cif"/>
+                            <constraint firstItem="me3-2y-zZ1" firstAttribute="top" secondItem="4Jz-8w-pHD" secondAttribute="bottom" constant="40" id="W00-YS-cbB"/>
                             <constraint firstItem="v7G-AO-Nn0" firstAttribute="leading" secondItem="yho-iR-OSw" secondAttribute="leading" constant="67" id="WYN-9Y-FkZ"/>
                             <constraint firstItem="IPg-aN-bz5" firstAttribute="top" secondItem="VYk-HQ-VeZ" secondAttribute="bottom" constant="1" id="cAI-xO-zvV"/>
+                            <constraint firstItem="Tec-wx-JkI" firstAttribute="top" secondItem="me3-2y-zZ1" secondAttribute="bottom" constant="-3" id="gfq-Wn-wet"/>
                             <constraint firstItem="v7G-AO-Nn0" firstAttribute="top" secondItem="yho-iR-OSw" secondAttribute="top" constant="118" id="jqM-LY-bn5"/>
+                            <constraint firstItem="Wds-FL-X1s" firstAttribute="width" secondItem="4Jz-8w-pHD" secondAttribute="width" id="ltJ-SD-f7j"/>
+                            <constraint firstItem="Wds-FL-X1s" firstAttribute="top" secondItem="4Jz-8w-pHD" secondAttribute="bottom" id="vvp-c3-JBd"/>
                             <constraint firstItem="VYk-HQ-VeZ" firstAttribute="top" secondItem="v7G-AO-Nn0" secondAttribute="bottom" constant="14" id="zf1-wp-YKc"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="yho-iR-OSw"/>
