WBasic Home done

--- a/src/frontend_swift/OneBank/OneBank/View/Base.lproj/Main.storyboard
+++ b/src/frontend_swift/OneBank/OneBank/View/Base.lproj/Main.storyboard
@@ -66,6 +66,9 @@
                                         <integer key="value" value="8"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <segue destination="OY1-Ic-VWk" kind="show" id="B8c-hd-90v"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Smarter way to manage all your bank accounts in one app." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gbg-zz-cuk">
                                 <rect key="frame" x="48" y="721" width="282" height="50"/>
